--- a/Breif/Login/CSS/sing-up.css
+++ b/Breif/Login/CSS/sing-up.css
@@ -1,37 +1,102 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
-    background-color: #8686;
+    /* background-color: rgba(68, 63, 68, 0.4); */
     font-family: Arial, Helvetica, sans-serif;
-    color: #ffffff;
-}
-
-main {
-    background-color: #6E69EC;
-}
-
-main {
-    background-color: #6E69EC;
+    color: #707070;
 }
 
 main .container {
-    border: 2px solid;
+    border: 1px solid #707070;
+    border-radius: 3px;
+    width: 350px;
+    padding: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-main .container form {
-    margin: 1em;
+main .container h1 {
+    font-size: 32px;
+    padding: 0.5em;
 }
 
-main .container form label{
-    margin: 0.5em 1em;
+main .container .username {
+    display: flex;
+    flex-direction: column;
 }
 
-main .container form input[type="text"],
-input[type="email"],
-input[type="password"],
-select,
-input[type="button"] {
-    outline: none;
+main .container .username label{
+    margin: 1em 0 0.5em 0.5em;
 }
 
-main .container form input[type="button"]{
-    margin: 3em 0;
+main .container .username input[type="text"] {
+    padding: 0.5em 1.5em;
 }
+
+main .container .email {
+    display: flex;
+    flex-direction: column;
+}
+
+main .container .email label{
+    margin: 1em 0 0.5em 0.5em;
+}
+
+main .container .email input[type="email"] {
+    padding: 0.5em 1.5em;
+}
+
+main .container .password {
+    display: flex;
+    flex-direction: column;
+}
+
+main .container .password label{
+    margin: 1em 0 0.5em 0.5em;
+}
+
+main .container .password input[type="password"] {
+    padding: 0.5em 1.5em;
+}
+
+main .container .function {
+    display: flex;
+    flex-direction: column;
+}
+
+main .container .function label{
+    margin: 1em 0 0.5em 0.5em;
+}
+
+main .container .function select {
+    padding: 0.5em 5em;
+}
+
+main .container input[type="submit"] {
+    margin: 2em 0;
+    border: 0;
+    background: none;
+    display: block;
+    border: 1px solid #707070;
+    padding: 0.5em 3.5em;
+    font-size: 15px;
+    color: #707070;
+}
+
+main .container input[type="submit"]:hover {
+    background-color: #6E69EC;
+    color: #ffffff;
+}
+
+
+
+
