--- a/Breif/Etudiant/CSS/carte.css
+++ b/Breif/Etudiant/CSS/carte.css
@@ -5,13 +5,16 @@
 }
 
 .container{
+    width: 95vw;
     margin : 2.5vh auto;
     display: grid;
     grid-row-gap: 40px;
 }
+
 .logo{
     display: flex;
 }
+
 .you{
     color: #6E69EC;
 }
@@ -37,27 +40,20 @@ img{
     height:fit-content;
     grid-template-columns: 20% 20% 20% 20% 20% ;
 }
+
 .img2{
     grid-column: 4/5;
 }
-.notif{
-    padding: 2%;
-    border: solid 3px #868691;
+
+.add{
+    width: 40px;
+    height: 40px;
+    border: none;
+    background: none;
 }
-.notif h1 {
+.carte{
+    border:solid 1px;
+}
+.carte h1{
     text-align: center;
 }
-.format{
-    display:flex;
-    justify-content: space-between;
-}
-.notif p {
-    margin-top: 15px;
-}
-.notif:hover{
-    border: solid 3px #6E69EC;
-}
-.foteer{
-    background-color: cornflowerblue;
-}
-
