--- a/Breif/Login/CSS/login.css
+++ b/Breif/Login/CSS/login.css
@@ -71,3 +71,13 @@ main .container input[type="submit"]:hover {
     color: #ffffff;
 }
 
+main form a {
+    text-decoration: none;
+    color: #6E69EC;
+}
+
+main form a:hover {
+    text-decoration: underline;
+    color: #707070;
+}
+
