--- a/Breif/Login/CSS/sing-up.css
+++ b/Breif/Login/CSS/sing-up.css
@@ -97,6 +97,13 @@ main .container input[type="submit"]:hover {
     color: #ffffff;
 }
 
+main form a {
+    text-decoration: none;
+    color: #6E69EC;
+}
 
-
+main form a:hover {
+    text-decoration: underline;
+    color: #707070;
+}
 
